added settings page and on the /dashboard i added a sample of what the trip planner is gonna look like

--- a/client/index.html
+++ b/client/index.html
@@ -7,6 +7,9 @@
     <style>
       @import url("https://fonts.googleapis.com/css?family=Plus+Jakarta+Sans:var(--PJ-bold-16px-font-weight),var(--body-large-regular-font-weight),var(--body-large-semibold-font-weight),700,var(--body-large-medium-font-weight),500,400,var(--body-medium-regular-font-weight),var(--heading-h1-font-weight),var(--PJ-semi-bold-16px-font-weight)|DM+Sans:400,700,600|Inter:var(--inter-semi-bold-16px-font-weight),var(--text-md-semibold-font-weight),var(--text-xl-normal-font-weight)");
     </style>
+    <script
+    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDtwIdZdy_a76MFTRj8myp7xkNXShZunek&libraries=places"
+    ></script>
     <style>
       @import url("https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css");
       * {
